# cookiecutter-pycli

./: README.md  cookiecutter.json  requirements.txt
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_slug }}/: .gitignore  .setup.sh  LICENSE.md  setup.cfg
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.__package_name }}/: app.py  cli.py
{{cookiecutter.project_slug}}/: .setup.sh  LICENSE.md  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/src/{{cookiecutter.__package_name}}/: __main__.py  app.py
