[metadata]
name = {{ cookiecutter.project_slug }}
author = {{ cookiecutter.author_name }}
author_email = {{ cookiecutter.author_email }}
maintainer = {{ cookiecutter.author_name }}
maintainer_email = {{ cookiecutter.author_email }}
license_files = LICENSE.md

[options]
python_requires = >=3.8
packages = find:
package_dir =
    =src
py_modules =
    {{ cookiecutter.__package_name }}
include_package_data = True
install_requires =
    click >= 8.1.3
    colorama == 0.4.5

[options.packages.find]
where = src

[options.package_data]
    * = *.txt, *.md

[options.extras_require]
dev =
    black >= 22.3.0
    flake8 >= 4.0.1

[options.entry_points]
console_scripts =
    {{ cookiecutter.project_slug }} = {{ cookiecutter.__package_name }}.cli:cli

[flake8]
max-line-length = 110
ignore =
    E501 # line too long
    # black breaks these two rules:
    E203 # whitespace before :
    W503 # line break before binary operator
extend-exclude =
    .venv
